plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}


group = 'com.opsara'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    flatDir {
        dirs 'lib'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation("dev.langchain4j:langchain4j:1.0.1")
    implementation("dev.langchain4j:langchain4j-open-ai:1.0.1")

    implementation("org.springframework.ai:spring-ai-openai:1.0.1")

    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
    implementation 'com.vladmihalcea:hibernate-types-60:2.21.1'// for JSON parsing

    implementation 'software.amazon.awssdk:s3:2.25.61'
    implementation 'software.amazon.awssdk:core:2.25.61'

    implementation 'com.googlecode.libphonenumber:libphonenumber:8.13.32'


    implementation 'org.apache.poi:poi-ooxml:5.2.3'

    implementation 'org.json:json:20240303'

    implementation("software.amazon.awssdk:sts:2.34.2")
    implementation("software.amazon.awssdk:s3:2.34.2")


    implementation name: 'opsara-aaaservice-0.0.1-SNAPSHOT-plain'

    implementation 'com.datastax.astra:astra-db-java:1.5.3'
    implementation 'com.datastax.astra:astra-sdk:1.2.9'

    implementation 'org.apache.commons:commons-csv:1.10.0'

}

tasks.named('test') {
    useJUnitPlatform()
}
